path fix / cleanup

--- a/Valuation.ipynb
+++ b/Valuation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Outline\n",
     "\n",
-    "Given a company_name do this:\n",
+    "Taking user 'company_name' input:\n",
     "\n",
     "1- Get all rows of the company and sort them by Series from Share Type column.\n",
     "\n",
